--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tehmangtony",
+  "name": "tehtony",
   "version": "1.0.1",
   "description": "",
   "main": "index.js",
@@ -11,9 +11,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "tehmangtony"
+    "tehtony"
   ],
-  "author": "tehmangtony",
+  "author": "tehtony",
   "license": "ISC",
   "dependencies": {
     "text-count": "^1.1.0"
